--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "framer-motion": "^11.11.7",
+    "gsap": "^3.12.7",
     "react": "^18.3.1",
+    "react-bits": "^1.0.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
   },
